--- a/upload.html
+++ b/upload.html
@@ -50,9 +50,9 @@
     <footer class="curved-menu">
         <nav class="menu">
             <ul>
-                <li><a href="#"><i class="fas fa-home"></i></a></li> <!-- Home is active -->
+                <li><a href="index.html"><i class="fas fa-home"></i></a></li> <!-- Home is active -->
                 <li><a href="#"><i class="fa-solid fa-folder"></i></a></li>
-                <li class="active"><a href="#"><i class="fa-solid fa-plus"></i></a></li>
+                <li class="active"><a href="upload.html"><i class="fa-solid fa-plus"></i></a></li>
                 <li><a href="#"><i class="fa-regular fa-bell"></i></a></li>
                 <li><a href="#"><i class="fa-solid fa-gears"></i></a></li>
             </ul>
