--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <footer class="curved-menu">
         <nav class="menu">
             <ul>
-                <li class="active"><a href="#"><i class="fas fa-home"></i></a></li> <!-- Home is active -->
+                <li class="active"><a href="index.html"><i class="fas fa-home"></i></a></li> <!-- Home is active -->
                 <li><a href="#"><i class="fa-solid fa-folder"></i></a></li>
                 <li><a href="upload.html"><i class="fa-solid fa-plus"></i></a></li>
                 <li><a href="#"><i class="fa-regular fa-bell"></i></a></li>
