--- a/upload.html
+++ b/upload.html
@@ -28,46 +28,79 @@
     <section>
         <h2>Upload your Documents</h2>
     </section>
+
     <section2>
         <div class="image-container">
-            <img src="images/Untitled design (6).png" alt="Central-gov">
+            <img id="upload-files" src="images/Untitled design (6).png" alt="Upload Files">
             <p>Upload Files</p>
         </div>
         <div class="image-container">
-            <img src="images/Untitled design (7).png" alt="Health">
+            <img id="camera-click" src="images/Untitled design (7).png" alt="Camera">
             <p>Camera</p>
         </div>
         <div class="image-container">
-            <img src="images/Untitled design (8).png" alt="Central-gov">
+            <img src="images/Untitled design (8).png" alt="Create PDF">
             <p>Create PDF</p>
         </div>
         <div class="image-container">
-            <img src="images/Untitled design (9).png" alt="Defence">
+            <img src="images/Untitled design (9).png" alt="Gallery">
             <p>Gallery</p>
         </div>
     </section2>
-    
+
+    <!-- Hidden file input for uploading -->
+    <input type="file" id="file-input" style="display: none;" multiple>
+
+    <!-- Hidden file input for camera capture -->
+    <input type="file" id="camera-input" accept="image/*;capture=camera" style="display: none;">
+
     <footer class="curved-menu">
         <nav class="menu">
             <ul>
-                <li><a href="index.html"><i class="fas fa-home"></i></a></li> <!-- Home is active -->
+                <li><a href="index.html"><i class="fas fa-home"></i></a></li>
                 <li><a href="#"><i class="fa-solid fa-folder"></i></a></li>
-                <li class="active"><a href="upload.html"><i class="fa-solid fa-plus"></i></a></li>
+                <li class="active"><a href="#"><i class="fa-solid fa-plus"></i></a></li>
                 <li><a href="#"><i class="fa-regular fa-bell"></i></a></li>
                 <li><a href="#"><i class="fa-solid fa-gears"></i></a></li>
             </ul>
         </nav>
     </footer>
-    <script>
-        function handleMenuClick(event) {
-            document.querySelectorAll('footer.curved-menu nav.menu ul li').forEach(item => {
-                item.classList.remove('active');
-            });
-            event.currentTarget.classList.add('active');
-        }
 
-        document.querySelectorAll('footer.curved-menu nav.menu ul li').forEach(item => {
-            item.addEventListener('click', handleMenuClick);
+    <script>
+        // File input handling for uploading files
+        const fileInput = document.getElementById('file-input');
+        const uploadFilesImage = document.getElementById('upload-files');
+
+        // When the "Upload Files" image is clicked, trigger the file input
+        uploadFilesImage.addEventListener('click', (event) => {
+            event.preventDefault();
+            fileInput.click(); // Trigger file input click
+        });
+
+        // Handle file selection
+        fileInput.addEventListener('change', (event) => {
+            const files = event.target.files;
+            if (files.length > 0) {
+                console.log('Files selected:', files);
+            }
+        });
+
+        // Camera input handling
+        const cameraInput = document.getElementById('camera-input');
+        const cameraClickImage = document.getElementById('camera-click');
+
+        // When the "Camera" image is clicked, trigger the camera input
+        cameraClickImage.addEventListener('click', (event) => {
+            event.preventDefault();
+            cameraInput.click(); // Trigger camera input click
+        });
+
+        // Handle camera photo capture
+        cameraInput.addEventListener('change', (event) => {
+            const photo = event.target.files[0];
+            if (photo) {
+                console.log('Photo captured:', photo);
+            }
         });
     </script>
 </body>
