--- a/upload.html
+++ b/upload.html
@@ -6,6 +6,20 @@
     <link rel="stylesheet" href="upload.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Upload Docs</title>
+    <style>
+        /* Add styles for the confirmation message */
+        .confirmation-message {
+            display: none;
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            z-index: 1000;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -54,54 +68,23 @@
     <!-- Hidden file input for camera capture -->
     <input type="file" id="camera-input" accept="image/*;capture=camera" style="display: none;">
 
+    <!-- Confirmation message -->
+    <div class="confirmation-message" id="confirmation-message">
+        Uploaded successfully !
+    </div>
+
     <footer class="curved-menu">
         <nav class="menu">
             <ul>
                 <li><a href="index.html"><i class="fas fa-home"></i></a></li>
                 <li><a href="#"><i class="fa-solid fa-folder"></i></a></li>
-                <li class="active"><a href="#"><i class="fa-solid fa-plus"></i></a></li>
+                <li class="active"><a href="upload.html"><i class="fa-solid fa-plus"></i></a></li>
                 <li><a href="#"><i class="fa-regular fa-bell"></i></a></li>
                 <li><a href="#"><i class="fa-solid fa-gears"></i></a></li>
             </ul>
         </nav>
     </footer>
 
-    <script>
-        // File input handling for uploading files
-        const fileInput = document.getElementById('file-input');
-        const uploadFilesImage = document.getElementById('upload-files');
-
-        // When the "Upload Files" image is clicked, trigger the file input
-        uploadFilesImage.addEventListener('click', (event) => {
-            event.preventDefault();
-            fileInput.click(); // Trigger file input click
-        });
-
-        // Handle file selection
-        fileInput.addEventListener('change', (event) => {
-            const files = event.target.files;
-            if (files.length > 0) {
-                console.log('Files selected:', files);
-            }
-        });
-
-        // Camera input handling
-        const cameraInput = document.getElementById('camera-input');
-        const cameraClickImage = document.getElementById('camera-click');
-
-        // When the "Camera" image is clicked, trigger the camera input
-        cameraClickImage.addEventListener('click', (event) => {
-            event.preventDefault();
-            cameraInput.click(); // Trigger camera input click
-        });
-
-        // Handle camera photo capture
-        cameraInput.addEventListener('change', (event) => {
-            const photo = event.target.files[0];
-            if (photo) {
-                console.log('Photo captured:', photo);
-            }
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
