--- a/upload.html
+++ b/upload.html
@@ -63,7 +63,7 @@
         <nav class="menu">
             <ul>
                 <li><a href="index.html"><i class="fas fa-home"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-folder"></i></a></li>
+                <li><a href="docs.html"><i class="fa-solid fa-folder"></i></a></li>
                 <li class="active"><a href="upload.html"><i class="fa-solid fa-plus"></i></a></li>
                 <li><a href="#"><i class="fa-regular fa-bell"></i></a></li>
                 <li><a href="#"><i class="fa-solid fa-gears"></i></a></li>
