--- a/index.html
+++ b/index.html
@@ -25,34 +25,6 @@
     </header>
     <main>
     <section>
-        <h2>Find Documents based on Categories</h2>
-    </section>
-    <section2>
-        <div class="image-container">
-            <img src="images/AN.png" alt="Central-gov">
-            <p>Central Government</p>
-        </div>
-        <div class="image-container">
-            <img src="images/HealthIcon.png" alt="Health">
-            <p>Health & Wellness</p>
-        </div>
-        <div class="image-container">
-            <img src="images/AN.png" alt="Central-gov">
-            <p>State Government</p>
-        </div>
-        <div class="image-container">
-            <img src="images/DefenceIcon (1).png" alt="Defence">
-            <p>Ministry of Defence</p>
-        </div>
-        <div class="image-container">
-            <img src="images/Finance.png" alt="Finance">
-            <p>Banking & Finances</p>
-        </div>
-    </section2>
-    <div class="explore-more-container">
-        <h6 class="explore-more">Explore More &gt;</h6>
-    </div>
-    <section>
         <h2>Secure your documents with us</h2>
     </section>
     <section2>
@@ -78,7 +50,7 @@
         <nav class="menu">
             <ul>
                 <li class="active"><a href="index.html"><i class="fas fa-home"></i></a></li> <!-- Home is active -->
-                <li><a href="#"><i class="fa-solid fa-folder"></i></a></li>
+                <li><a href="docs.html"><i class="fa-solid fa-folder"></i></a></li>
                 <li><a href="upload.html"><i class="fa-solid fa-plus"></i></a></li>
                 <li><a href="#"><i class="fa-regular fa-bell"></i></a></li>
                 <li><a href="#"><i class="fa-solid fa-gears"></i></a></li>
